# json-flatten

./: README.md  json-flatten.cabal  stack.yaml
app/: Main.hs
