name:                json-flatten
version:             0.1.0.0
synopsis:            JSON flatten and hiearchical key names
description:         Please see README.md
homepage:            https://github.com/j1r1k/json-flatten#readme
license:             BSD3
license-file:        LICENSE
author:              Jiri Marsicek
maintainer:          jiri.marsicek@gmail.com
copyright:           2015 Jiri Marsicek
category:            Web, Text, JSON
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable json-flatten
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , aeson-flatten
                     , aeson-prefix
                     , bytestring
                     , mtl
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/j1r1k/json-flatten
